[package]
name = "libp2p-inspect"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p-identity = { version = "=0.1.3", features = ["peerid", "ed25519"] }
libp2p-gossipsub = "=0.44.1"
libp2p-noise = "=0.41.0"
libp2p-yamux = "=0.41.0"
libp2p-tcp = { version = "=0.38.0", features = ["async-io"] }
libp2p-swarm = "=0.41.1"
libp2p-core = "=0.38.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8.5"
ed25519-dalek = "2.1.1"





