[package]
name = "node1"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.38", features = ["full"] }
libp2p = { version = "0.53.2", features = ["gossipsub", "ping", "tcp", "tokio"] }
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
