[package]
name = "node5"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "node5"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
libp2p = { version = "0.53", features = ["gossipsub", "ping", "tcp", "tokio", "noise", "yamux"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
