[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
rand = "0.8"
libp2p = { version = "0.53.2", features = ["gossipsub", "ping", "tcp", "tokio", "noise", "yamux", "macros"] }
tokio = { version = "1.38", features = ["full"] }
