[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate-keys"
path = "src/bin/generate-keys.rs"

[[bin]]
name = "verify-keys"
path = "src/bin/verify-keys.rs"

[dependencies]
libp2p-identity = { version = "=0.1.3", features = ["peerid", "ed25519"] }
serde_json = "1.0"
hex = "0.4"
bs58 = "0.5"
ed25519-dalek = "2.1.1"
rand = "0.8"
